Move headers to pushkin subdir. Add header install target.

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,3 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
-add_subdirectory(math)
+install(
+    DIRECTORY pushkin
+    DESTINATION include
+    FILES_MATCHING PATTERN *.hpp PATTERN *.inl
+)
