feat: remove old code, replace all with xptempates

--- a/benchmark/CMakeLists.txt
+++ b/benchmark/CMakeLists.txt
@@ -13,7 +13,7 @@ include_directories(${GBENCH_INCLUDE_DIRS})
 
 set(benchmark_SRCS
     vector_benchmarks.cpp
-    #matrix_benchmarks.cpp
+    matrix_benchmarks.cpp
 )
 add_executable(benchmark-psst-math ${benchmark_SRCS})
 target_link_libraries(benchmark-psst-math
