--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -20,6 +20,7 @@ set(
     misc_tests.cpp
     vector_test.cpp
     matrix_test.cpp
+    quaternion_tests.cpp
 )
 add_executable(test-psst-math ${test_program_SRCS})
 target_link_libraries(
