--- a/.travis.yml
+++ b/.travis.yml
@@ -1,56 +1,8 @@
 language: cpp
-
+distrib: xenial
 matrix:
   include:
     # Linux GCC
-    # - name: "Linux GCC-5 Debug"
-    #   os: linux
-    #   addons:
-    #     apt:
-    #       sources:
-    #         - ubuntu-toolchain-r-test
-    #       packages:
-    #         - g++-5
-    #   env:
-    #     - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CMAKE_CXX_FLAGS=-std=c++17"
-    #     - TRAVIS_BUILD_TYPE=Debug
-
-    # - name: "Linux GCC-5 Release"
-    #   os: linux
-    #   addons:
-    #     apt:
-    #       sources:
-    #         - ubuntu-toolchain-r-test
-    #       packages:
-    #         - g++-5
-    #   env:
-    #     - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5 && CMAKE_CXX_FLAGS=-std=c++17"
-    #     - TRAVIS_BUILD_TYPE=Release
-
-    # - name: "Linux GCC-6 Debug"
-    #   os: linux
-    #   addons:
-    #     apt:
-    #       sources:
-    #         - ubuntu-toolchain-r-test
-    #       packages:
-    #         - g++-6
-    #   env:
-    #     - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6 && CMAKE_CXX_FLAGS=-std=c++17"
-    #     - TRAVIS_BUILD_TYPE=Debug
-
-    # - name: "Linux GCC-6 Release"
-    #   os: linux
-    #   addons:
-    #     apt:
-    #       sources:
-    #         - ubuntu-toolchain-r-test
-    #       packages:
-    #         - g++-6
-    #   env:
-    #     - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6 && CMAKE_CXX_FLAGS=-std=c++17"
-    #     - TRAVIS_BUILD_TYPE=Release
-
     - name: "Linux GCC-7 Debug"
       os: linux
       addons:
@@ -81,7 +33,7 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-trusty-4.0
+            - llvm-toolchain-xenial-4.0
           packages:
             - clang-4.0
       env:
@@ -93,7 +45,7 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-trusty-4.0
+            - llvm-toolchain-xenial-4.0
           packages:
             - clang-4.0
       env:
@@ -105,7 +57,7 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-trusty-5.0
+            - llvm-toolchain-xenial-5.0
           packages:
             - clang-5.0
             - libc++-dev
@@ -118,7 +70,7 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-trusty-5.0
+            - llvm-toolchain-xenial-5.0
           packages:
             - clang-5.0
             - libc++-dev
@@ -131,7 +83,7 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-trusty-6.0
+            - llvm-toolchain-xenial-6.0
           packages:
             - clang-6.0
             - libllvm6.0
@@ -146,7 +98,7 @@ matrix:
       addons:
         apt:
           sources:
-            - llvm-toolchain-trusty-6.0
+            - llvm-toolchain-xenial-6.0
           packages:
             - clang-6.0
             - libllvm6.0
@@ -158,7 +110,6 @@ matrix:
 
     - name: "Linux clang-7.0 Debug"
       os: linux
-      distrib: xenial
       addons:
         apt:
           sources:
@@ -172,7 +123,6 @@ matrix:
 
     - name: "Linux clang-7.0 Release"
       os: linux
-      distrib: xenial
       addons:
         apt:
           sources:
