tune travis build script

--- a/.travis.yml
+++ b/.travis.yml
@@ -61,15 +61,15 @@ matrix:
     - name: "Linux clang-7.0 Debug"
       os: linux
       dist: xenial
-      # addons:
-      #   apt:
-      #     # sources:
-      #     #   - llvm-toolchain-xenial-7.0
+      addons:
+        apt:
+          sources:
+            - llvm-toolchain-7
       #     packages:
       #       - clang-7
       #       # - libc++-dev
       env:
-        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
+        - MATRIX_EVAL="CC=clang-7 && CXX=clang++"
         - TRAVIS_BUILD_TYPE=Debug
 
     - name: "Linux clang-7.0 Release"
@@ -83,7 +83,7 @@ matrix:
       #       - clang-7
       #       # - libc++-dev
       env:
-        - MATRIX_EVAL="CC=clang-7 && CXX=clang++-7"
+        - MATRIX_EVAL="CC=clang-7 && CXX=clang++"
         - TRAVIS_BUILD_TYPE=Release
 
     # OSX Clang
