feat: rename root include directory to match namespace

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 2.6)
 
 install(
-    DIRECTORY pushkin
+    DIRECTORY psst
     DESTINATION include
     FILES_MATCHING PATTERN *.hpp PATTERN *.inl
 )
